Tue Jun 20 13:53:05 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

          Tweak "code" that emits -stamp dependency to work with stamp
          files in subdirectories.

Tue Jun 20 18:31:35 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc8csharp.mpd:

          Added the ability to set the RegisterForComInterop setting as a
          template variable.

Tue Jun 20 17:06:50 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:

          Fixed a bug where mixing C++ and C# projects in a single workspace
          would result in invalid projects due to the fact that a project
          creator would have only one TemplateInputReader which would read
          the template input file for the first projects language and all
          other projects would receive the same template input.

          Additionally, the configuration/platform combination would only be
          updated if the platform is a non-empty string.

          And finally, the ability to nest template functions (like reverse,
          sort, etc.) not in the context of a foreach has been added to the
          template parser.

Tue Jun 20 12:45:30 UTC 2006  James H. Hill  <hillj@isis.vanderbilt.edu>

        * modules/VC8WebWorkspaceCreator.pm:

          Changed the location of the web project from the cwd to
          '.'.

Tue Jun 20 12:41:49 UTC 2006  James H. Hill  <hillj@isis.vanderbilt.edu>

        * templates/vc8csharp.mpd:

          Removed the aspx_files variable since web projects assume all
          files located in the directory of the solution is part of the
          project.

Fri Jun 16 00:37:06 UTC 2006  James H. Hill  <hillj@isis.vanderbilt.edu>

        * modules/VC7WorkspaceCreator.pm:

          Added the web project guid to the rest of the GUIDs. This
          allows use to resue the the default VC workspace generator